Disable collecting coverage in Jest by default
Collecting coverage is slow, it does not help when running tests often.
For example when you are writing tests and launching them in your IDE,
coverage is not useful at this time.
It should be enabled for CI or when explicitly required ("yarn run
coverage")

--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
   "scripts": {
     "lint": "eslint js --ext=js,vue",
     "test": "yarn lint && cross-env NODE_ENV=test && jest ./js/tests",
-    "coverage": "yarn test && codecov"
+    "coverage": "yarn test --coverage && codecov"
   },
   "repository": {
     "type": "git",
